Reformatting code using new Eclipse formatter (same as WildFly) (#21)